--- a/css/main.css
+++ b/css/main.css
@@ -21,3 +21,14 @@
 .fixed-table tr:nth-child(odd) {
     background-color: #ffe4e1;
 }
+.arrow-select
+{
+    display:flex;
+    flex-direction: row;
+}
+.dog-image-container
+{
+    width:340px;
+    height:220px;
+    border : 1px solid black;
+}
