--- a/css/bonusStyles.css
+++ b/css/bonusStyles.css
@@ -31,3 +31,6 @@
     transform: rotate(9deg); 
     
 }
+/* #loading {
+    background: transparent url('http://thinkfuture.com/wp-content/uploads/2013/10/loading_spinner.gif') center no-repeat;
+  } */
