--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
-body
+.dogs-app
 {
-    background-color:#E9E9E9;
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f7ffff+2,f2ffff+100 */
+background: rgb(247,255,255); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(247,255,255,1) 2%, rgba(242,255,255,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top, rgba(247,255,255,1) 2%,rgba(242,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom, rgba(247,255,255,1) 2%,rgba(242,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7ffff', endColorstr='#f2ffff',GradientType=0 ); /* IE6-9 */
     padding: 20px;
 }
 .dogs-app {
@@ -21,12 +26,16 @@ body
     align-self: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin-bottom:50px;
+    text-align: center;
+    color:white
+   
 }
 
 .fixed-table tr:nth-child(even) {
-    background-color: violet;
+    background-color:#FC0604;
 }
 
 .fixed-table tr:nth-child(odd) {
-    background-color: #ffe4e1;
+    background-color: #000000be;
+;
 }
