--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
 .dogs-app
 {
-/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f7ffff+2,f2ffff+100 */
+
 background: rgb(247,255,255); /* Old browsers */
-background: -moz-linear-gradient(top, rgba(247,255,255,1) 2%, rgba(242,255,255,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, rgba(247,255,255,1) 2%,rgba(242,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, rgba(247,255,255,1) 2%,rgba(242,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7ffff', endColorstr='#f2ffff',GradientType=0 ); /* IE6-9 */
+background: -moz-linear-gradient(top, rgba(247,255,255,1) 2%, rgba(242,255,255,1) 100%); 
+background: -webkit-linear-gradient(top, rgba(247,255,255,1) 2%,rgba(242,255,255,1) 100%); 
+background: linear-gradient(to bottom, rgba(247,255,255,1) 2%,rgba(242,255,255,1) 100%); 
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7ffff', endColorstr='#f2ffff',GradientType=0 );
     padding: 20px;
 }
 .dogs-app {
